syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/invoice/invoice_messages_description.proto";



//Platform

option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.invoice";
option java_outer_classname = "InvoiceServiceDescriptionProto";

package avenue.rms.protobuf.invoice;

service InvoiceServiceProto {

  rpc list (ListInvoiceRequestProto) returns (ListInvoiceResponseProto) {
  }

  rpc get (GetInvoiceRequestProto) returns (GetInvoiceResponseProto) {
  }

  rpc count (CountInvoiceRequestProto) returns (CountInvoiceResponseProto) {
  }

  rpc add (AddInvoiceRequestProto) returns (AddInvoiceResponseProto) {
  }

  rpc update (UpdateInvoiceRequestProto) returns (UpdateInvoiceResponseProto) {
  }

  rpc delete (DeleteInvoiceRequestProto) returns (DeleteInvoiceResponseProto) {
  }

}

message CountInvoiceRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message BulkDeleteInvoiceRequestProto {
  repeated string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message BulkDeleteInvoiceResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  repeated avenue.financial.protobuf.invoice.InvoiceProto data = 5;
}

message CountInvoiceResponseProto {
  int32 limit = 1;
  int32 page_number = 2;
  int32 pages_count = 3;
  int32 total_count = 4;
}

message ListInvoiceResponseProto {
  repeated avenue.financial.protobuf.invoice.InvoiceProto data = 1;
}

message GetInvoiceResponseProto {
  avenue.financial.protobuf.invoice.InvoiceProto data = 1;
}

message GetInvoiceRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestParamProto param = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message ListInvoiceRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}




message AddInvoiceRequestProto {
  avenue.financial.protobuf.invoice.AddInvoiceProto data = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message UpdateInvoiceRequestProto {
  string id = 1;
  avenue.financial.protobuf.invoice.UpdateInvoiceProto data = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message DeleteInvoiceRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}


message AddInvoiceResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.invoice.InvoiceProto data = 5;
}

message UpdateInvoiceResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.invoice.InvoiceProto data = 5;
}

message DeleteInvoiceResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.invoice.InvoiceProto data = 5;
}








